[package]
name = "lapidary"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
image = "0.23"
indicatif = "0.16"
bitflags = "1.3"
rayon = "1.5"
rand = "0.8"
rand_xoshiro = "0.6.0"
#tokio = { version = "1.14", features = ["full"] }
#ndarray = "0.15"
